--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Pillow==10.1.0
 scikit-learn==1.3.2
 tensorflow==2.14.0
 scipy==1.11.3
+wheel==0.41.3
 sklearn==0.0.post11
 opencv-python==4.8.1.78
 PyYAML==6.0.1
